Fix dropdown z-index

--- a/public/css/components/_ui.scss
+++ b/public/css/components/_ui.scss
@@ -1,6 +1,6 @@
 .dropdown {
     position: absolute;
-    z-index: 1;
+    z-index: 10;
     background-color: #1e1e1e;
     border: 1px solid #333;
     padding: 6px 0;
